Bug 1133009 - ensure filterlog.html always has a well formed HTML header. r=rkent, r=mkmelin